# Sesh

./: CMakeLists.txt  MinimalTriangle.vala  README.md  makefile  meson.build  notes  readme.md
ValaGL.Core/: GLProgram.vala  IBO.vala
data/: fragment.glsl  fragment.glslf  vertex.glsl  vertex.glslv
data/3d/: fragment.glslf  vertex.glslv
data/jellycube/: fragment.glslf  vertex.glsl  vertex.glslv
data/slide_cube/: fragment.glslf  geometry.glsl  vertex.glslv
data/spectrum/: fragment.glslf  vertex.glslv
data/spectrum_bars/: fragment.glslf  vertex.glslv
data/test/: controller.blend  controller.blend1  controller.mtl  vertex.glslv
src/: demoswitcher.vala  fft_streamer.vala  graphics.vala  graphics_old.vala  sesh.vala  settings.vala  window.vala
